Delta test task

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,152 +1,1 @@
-:root {
-  --color-black: #000;
-  --color-gray: #948A96;
-  --color-gray-light: #f5f5f5;
-  --color-white: #fff;
-  --color-green: #447b54;
-  --color-green-light: #eff7e8;
-  --color-blue: #f0f8fe;
-  --color-red: #df6660;
-  --color-red-light: #f7e7e6;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  text-size-adjust: none;
-}
-
-html, body {
-  min-width: 360px;
-}
-
-body {
-  margin: 0;;
-  color: var(--color-black);
-  background-color: var(--color-white);
-  min-height: 100vh;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.2;
-}
-
-main {
-  padding: 10px 0 50px;
-}
-
-h1 {
-  font-size: 28px;
-  color: var(--color-black);
-}
-
-p {
-  margin: 0;
-}
-
-ol {
-  margin-bottom: 20px;
-  padding: 0;
-  list-style-position: inside;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  &:hover, &:focus {
-    text-decoration: underline;
-  }
-}
-
-.container {
-  width: 100%;
-  max-width: 1024px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
-.hide {
-  display: none;
-}
-
-canvas {
-  width: 600px;
-  height: 300px;
-}
-
-.wrapper {
-  overflow-x: auto;
-}
-
-.table {
-  font-size: 14px;
-  border-collapse: collapse;
-  width: 100%;
-
-  tbody tr:nth-child(odd) {
-    cursor: pointer;
-  }
-  td:not(:nth-child(1)) {
-    text-align: right;
-  }
-  td:nth-child(3) div {
-    display: grid;
-    grid-template-columns: 1fr 40px;
-    column-gap: 10px;
-  }
-  td div, th div {
-    padding: 15px;
-    font-weight: normal;
-    background-color: var(--color-gray-light);
-  }
-  tr:nth-child(odd) {
-    display: grid;
-    grid-template-columns: minmax(290px, auto) minmax(130px, 150px) repeat(2, 150px)
-  }
-  td:nth-child(2) div, th:nth-child(2) div {
-    background-color: var(--color-blue);
-  }
-  td:nth-child(2) div, td:nth-child(4) div {
-    padding: 15px 25px;
-  }
-  .table__graph {
-    display: flex;
-    justify-content: center;
-    background-color: transparent;
-  }
-}
-
-tbody tr:nth-child(odd).loader {
-  cursor: auto;
-  td {
-    display: flex;
-    justify-content: center;
-    grid-column: span 4;
-  }
-  img {
-    width: 50px;
-  }
-}
-
-.color-bg-red {
-  background-color: var(--color-red-light) !important;
-}
-.color-bg-green {
-  background-color: var(--color-green-light) !important;;
-}
-.color-text-red {
-  color: var(--color-red) !important;;
-}
-.color-text-green {
-  color: var(--color-green) !important;;
-}
-
-.image {
-  margin-top: 50px;
-}
-.note {
-  margin-top: 20px;
-  font-size: 14px;
-}
+:root{--color-black:#000;--color-gray:#948a96;--color-gray-light:#f5f5f5;--color-white:#fff;--color-green:#447b54;--color-green-light:#eff7e8;--color-blue:#f0f8fe;--color-red:#df6660;--color-red-light:#f7e7e6}*{box-sizing:border-box}html{text-size-adjust:none}html,body{min-width:360px}body{margin:0;color:var(--color-black);background-color:var(--color-white);min-height:100vh;font-family:Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.2}main{padding:10px 0 50px}h1{font-size:28px;color:var(--color-black)}p{margin:0}ol{margin-bottom:20px;padding:0;list-style-position:inside}a{color:inherit;text-decoration:none;&:hover,&:focus{text-decoration:underline}}.container{width:100%;max-width:1024px;margin:0 auto;padding:0 10px}.hide{display:none}canvas{width:600px;height:300px}.wrapper{overflow-x:auto}.table{font-size:14px;border-collapse:collapse;width:100%;tbody tr:nth-child(odd){cursor:pointer}td:not(:nth-child(1)){text-align:right}td:nth-child(3) div{display:grid;grid-template-columns:1fr 40px;column-gap:10px}td div,th div{padding:15px;font-weight:normal;background-color:var(--color-gray-light)}tr:nth-child(odd){display:grid;grid-template-columns:minmax(290px,auto) minmax(130px,150px) repeat(2,150px)}td:nth-child(2) div,th:nth-child(2) div{background-color:var(--color-blue)}td:nth-child(2) div,td:nth-child(4) div{padding:15px 25px}.table__graph{display:flex;justify-content:center;background-color:transparent}}tbody tr:nth-child(odd).loader{cursor:auto;td{display:flex;justify-content:center;grid-column:span 4}img{width:50px}}.color-bg-red{background-color:var(--color-red-light) !important}.color-bg-green{background-color:var(--color-green-light) !important}.color-text-red{color:var(--color-red) !important}.color-text-green{color:var(--color-green) !important}.image{margin-top:50px}.note{margin-top:20px;font-size:14px}
